add tags and denominations to churches, via acts_as_taggable_on

--- a/app/views/churches/_church.html.haml
+++ b/app/views/churches/_church.html.haml
@@ -1,2 +1,4 @@
 .church
   %h2= link_to church.name, church
+  .denominations
+    = render partial: 'denomination', collection: church.denomination_list
