--- a/app/views/churches/_form.html.haml
+++ b/app/views/churches/_form.html.haml
@@ -7,4 +7,8 @@
 
   = f.label      :name
   = f.text_field :name
+  = f.label      :denomination_list
+  = f.text_field :denomination_list
+  = f.label      :tag_list
+  = f.text_field :tag_list
   = f.submit
